# ChangeLog for dev-libs/apr-util
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.107 2008/06/01 11:42:35 hollow Exp $

  01 Jun 2008; Benedikt Böhm <hollow@gentoo.org> apr-util-1.2.10.ebuild,
  apr-util-1.2.12.ebuild:
  fix #221653

  28 Jan 2008; Benedikt Böhm <hollow@gentoo.org>
  -files/apr-util-0.9.12-db-4.5.patch, -files/apr-util-0.9.12-linking.patch,
  -apr-util-0.9.12.ebuild, -apr-util-0.9.12-r1.ebuild,
  -apr-util-0.9.13.ebuild:
  remove apr-util-0 wrt #203578

*apr-util-1.2.12 (15 Dec 2007)

  15 Dec 2007; Benedikt Böhm <hollow@gentoo.org> -apr-util-1.2.8.ebuild,
  -apr-util-1.2.8-r1.ebuild, +apr-util-1.2.12.ebuild:
  version bump; #200947

  16 Nov 2007; nixnut <nixnut@gentoo.org> apr-util-1.2.10.ebuild:
  Stable on ppc wrt bug 198866

  16 Nov 2007; Raúl Porcel <armin76@gentoo.org> apr-util-1.2.10.ebuild:
  alpha/ia64 stable wrt #198866

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> apr-util-1.2.10.ebuild:
  amd64 stable, bug 198866

  13 Nov 2007; Dawid Węgliński <cla@gentoo.org> apr-util-1.2.10.ebuild:
  Stable on x86 (bug #198866)

  13 Nov 2007; Markus Rothe <corsair@gentoo.org> apr-util-1.2.10.ebuild:
  Stable on ppc64; bug #198866

  13 Nov 2007; Jeroen Roovers <jer@gentoo.org> apr-util-1.2.10.ebuild:
  Stable for HPPA (bug #198866).

  12 Nov 2007; Ferris McCormick <fmccor@gentoo.org> apr-util-1.2.10.ebuild:
  Sparc stable --- Bug #198866 --- Good for two months.

  09 Sep 2007; Benedikt Böhm <hollow@gentoo.org> apr-util-1.2.10.ebuild:
  fix #188485

*apr-util-1.2.10 (08 Sep 2007)

  08 Sep 2007; Benedikt Böhm <hollow@gentoo.org> +apr-util-1.2.10.ebuild:
  version bump; #191733

  08 Aug 2007; Timothy Redaelli <drizzt@gentoo.org>
  apr-util-0.9.12-r1.ebuild:
  Stable on ppc wrt #169507.

  31 Jul 2007; Christian Heim <phreak@gentoo.org> apr-util-1.2.8-r1.ebuild:
  Use >=dev-libs/apr-${PV} instead of ~dev-libs/apr-${PV}. The "~" limits us